# CellPathway

./: CellPathway.ipynb  LICENSE  README.md  cellpathway_enrich.py  cellpathway_tad.py  pyproject.toml  requirements.txt  run_cellpathway.py
cellpathway/: __init__.py  cli.py  core.py  tad.py
data/: genes_w_noncoding.bb
data/Atlas/: Adipocyte.hg38.bed  B_cell_blood.hg38.bed  CD133+.hg38.bed  CD14+.hg38.bed  CD14+_monocyte.hg38.bed  CD19+.hg38.bed  CD20+.hg38.bed  CD34+.hg38.bed  CD36+.hg38.bed  CD4+.hg38.bed  CD8+.hg38.bed  Cerebellum.hg38.bed  Denditric_cell.hg38.bed  Endometrial_stromal_cell.hg38.bed  Fetal_brain.hg38.bed  Fetal_heart.hg38.bed  Fetal_kidney.hg38.bed  Fetal_lung.hg38.bed  GC_B_cell.hg38.bed  HCASMC.hg38.bed  HSC.hg38.bed  HUVEC.hg38.bed  Heart.hg38.bed  Keratinocyte.hg38.bed  Kidney.hg38.bed  Kidney_cortex.hg38.bed  Liver.hg38.bed  MSC_BM.hg38.bed  Macrophage.hg38.bed  Melanocyte.hg38.bed  Monocyte.hg38.bed  NHBE.hg38.bed  NHDF.hg38.bed  NHEK.hg38.bed  NHLF.hg38.bed  NKC.hg38.bed  Osteobl.hg38.bed  Osteoblast.hg38.bed  Pancreas.hg38.bed  Pancreatic_islet.hg38.bed  (+11 more)
data/Single_cell/: AT1_lung.hg38.bed  AT2_lung.hg38.bed  Acinar_pancreas.hg38.bed  Adrenoc_adrenal.hg38.bed  Antigen_present_thymus.hg38.bed  Arteries_lung.hg38.bed  Astro_cerebellum_brain.hg38.bed  BAE_lung.hg38.bed  B_cell_lung.hg38.bed  Basal_cells_lung.hg38.bed  CD14_blood.hg38.bed  CD16_Mono_blood.hg38.bed  CD4_blood.hg38.bed  CD8_blood.hg38.bed  CLP_blood.hg38.bed  CLP_bone_marrow.hg38.bed  (+153 more)
example/: autism_FC_10.csv  requirements.txt  tad_domain_gene_brain_autism.txt
